face_always tweakings + pitch inverted mode

--- a/fteqcc.ini
+++ b/fteqcc.ini
@@ -201,7 +201,7 @@ log           off                       # Write out a compile log
 enginebinary  c:\Quake\fteqw64.exe      # Location of the engine binary to run. Change this to something
                                         # else to run a different engine, but not all support debugging.
 basedir       c:\Quake                  # The base directory of the game that contains your sub directory
-engineargs    "-game remobilize_test4 +exec fte.cfg +map rm_memory" 
+engineargs    "-game remobilize_test4 +exec fte.cfg +map DevilSwitch" 
                                         # The engine commandline to use when debugging. You'll likely want
                                         # to ensure this contains -window as well as the appropriate -game
                                         # argument.
